[package]
name = "kanji-number-parser"
version = "0.1.0"
description = "Convert Chinese numeral `String` to `BigUInt`."
authors = ["matsu7874 <mtsmtkmt@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/matsu7874/kanji-number-parser"
readme = "README.md"
keywords = ["japanese", "parser"]

[dependencies]
num-bigint = "0.2.3"
num-traits = "*"
failure = "0.1.5"